[gd_scene load_steps=2 format=3 uid="uid://cylgfafpxpfh2"]

[ext_resource type="Script" path="res://GUI/pause_menu.gd" id="1_krluq"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 648.0
offset_bottom = 648.0
script = ExtResource("1_krluq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0588235, 0.0588235, 0.85098)

[node name="Main Menu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -324.0
offset_right = 106.0
offset_bottom = -293.0
grow_vertical = 2
size_flags_vertical = 3
text = "Main Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5481
offset_top = -68.0
offset_right = 83.5481
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Restart"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[connection signal="button_down" from="Main Menu" to="." method="_on_main_menu_button_down"]
[connection signal="button_down" from="VBoxContainer/Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="VBoxContainer/Restart" to="." method="_on_restart_button_down"]
[connection signal="button_down" from="VBoxContainer/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="VBoxContainer/Quit" to="." method="_on_quit_button_down"]
